# docs/api/openapi.yaml
@@ -438,6 +438,10 @@ components:
           type: string
           format: date-time
           pattern: ^(?:(?:\d\d[2468][048]|\d\d[13579][26]|\d\d0[48]|[02468][048]00|[13579][26]00)-02-29|\d{4}-(?:(?:0[13578]|1[02])-(?:0[1-9]|[12]\d|3[01])|(?:0[469]|11)-(?:0[1-9]|[12]\d|30)|(?:02)-(?:0[1-9]|1\d|2[0-8])))T(?:(?:[01]\d|2[0-3]):[0-5]\d:[0-5]\d(?:\.\d+)?(?:Z))$
+        return_url:
+          type: string
+          maxLength: 2048
+          format: uri
       required:
         - tenant_id
         - grant
@@ -465,6 +469,11 @@ components:
             - type: string
               format: uri
             - type: "null"
+        return_url:
+          anyOf:
+            - type: string
+              format: uri
+            - type: "null"
         mandate_id:
           anyOf:
             - type: string
@@ -483,6 +492,7 @@ components:
         - tenant_id
         - status
         - consent_url
+        - return_url
         - mandate_id
         - created_at
         - expires_at
